--- a/lunch/package.json
+++ b/lunch/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jquery": "^1.9.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.16",
     "multer": "^1.4.2",
