--- a/lunch/package.json
+++ b/lunch/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "server": "nodemon server/server"
+    "server": "nodemon server"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -34,6 +34,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "mutationobserver-shim": "^0.3.3",
+    "nodemon": "^2.0.4",
     "popper.js": "^1.16.0",
     "portal-vue": "^2.1.6",
     "sass": "^1.19.0",
