--- a/lunch/package.json
+++ b/lunch/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "jquery": "^1.9.1",
     "jsonwebtoken": "^8.5.1",
+    "ldap-authentication": "^2.2.4",
     "mongoose": "^5.9.16",
     "multer": "^1.4.2",
     "vue": "^2.6.11",
