--- a/lunch/package.json
+++ b/lunch/package.json
@@ -19,8 +19,10 @@
     "jquery": "^1.9.1",
     "jsonwebtoken": "^8.5.1",
     "ldap-authentication": "^2.2.4",
+    "ldapjs-client": "^0.1.1",
     "mongoose": "^5.9.16",
     "multer": "^1.4.2",
+    "promise": "^8.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.3.1"
   },
